--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-img.logo {
-	padding-left: 160px;
+.logo {
+  padding-left: 160px;
 }
 
-img.button {
+.button {
 	padding-right: 15px;
 	padding-left: 15px;
 	float: center;
@@ -11,21 +11,22 @@ img.button {
 	height: 50px;
 }
 
-a { 
-	text-decoration: none 
+a {
+	text-decoration: none
 }
 
 body {
 	background-color: black;
 }
 
-div.twitchlogin {
-	padding-right: 2px;
+.twitchlogin {
+	margin-right: 4px;
+	margin-top: 10px;
 	float: right;
 }
 
-div.logohead {
-	background-image: url(/assets/banner2.png); 
+.logohead {
+	background-image: url(/assets/banner2.png);
 	background-color: black;
 	background-repeat: repeat-x;
 	height:455px;
@@ -33,9 +34,17 @@ div.logohead {
 	text-align: center;
 }
 
-div.socialcontainer {
-	background-color:black; 
+.socialcontainer {
+	background-color:black;
 	height:80px;
 	border: solid white;
 	text-align: center;
+}
+
+.twitch-connect {
+	display: none;
+}
+
+.twitch-logout {
+	display: none;
 }
