--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 .logo {
-  padding-left: 160px;
+	position: absolute;
+  left: 740px;
+  top: 5px;
+  z-index: 1;
 }
 
 .button {
@@ -26,9 +29,6 @@ body {
 }
 
 .logohead {
-	background-image: url(/assets/banner2.png);
-	background-color: black;
-	background-repeat: repeat-x;
 	height:455px;
 	padding-bottom: 15px;
 	text-align: center;
@@ -48,3 +48,54 @@ body {
 .twitch-logout {
 	display: none;
 }
+
+#tab {
+	position: absolute;
+  left: 1145px;
+  top: 230px;
+  right: 0px;
+}
+
+.direct {
+  position: absolute;
+  left: 787px;
+  top: 230px;
+  right: 0px;
+}
+
+#home {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+}
+
+#sched {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	z-index: -1;
+}
+
+#vod {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	z-index: -2;
+}
+
+.backgroundhead {
+	background-image: url(/assets/banner2.png);
+	background-repeat: no-repeat;
+	height:455px;
+	padding-bottom: 5px;
+	text-align: center;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+	z-index: -3;
+}
+
