--- a/style.css
+++ b/style.css
@@ -1,59 +1,62 @@
 .logo {
-	position: absolute;
+  position: absolute;
   left: 740px;
   top: 5px;
-  z-index: 1;
+  z-index: 4;
 }
 
 .button {
-	padding-right: 15px;
-	padding-left: 15px;
-	float: center;
-	display: inline;
-	width: 250px;
-	height: 50px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: center;
+  display: inline;
+  width: 250px;
+  height: 50px;
 }
 
 a {
-	text-decoration: none
+  text-decoration: none
 }
 
 body {
-	background-color: black;
+  background-color: black;
 }
 
 .twitchlogin {
-	margin-right: 4px;
-	margin-top: 10px;
-	float: right;
+  margin-right: 4px;
+  margin-top: 10px;
+  float: right;
 }
 
 .logohead {
-	height:455px;
-	padding-bottom: 15px;
-	text-align: center;
+  height:455px;
+  padding-bottom: 15px;
+  text-align: center;
 }
 
 .socialcontainer {
-	background-color:black;
-	height:80px;
-	border: solid white;
-	text-align: center;
+  background-color:black;
+  height:80px;
+  border: solid white;
+  text-align: center;
 }
 
 .twitch-connect {
-	display: none;
+  display: none;
+  cursor: pointer;
 }
 
 .twitch-logout {
-	display: none;
+  display: none;
+  cursor: pointer;
 }
 
 #tab {
-	position: absolute;
+  position: absolute;
   left: 1145px;
   top: 230px;
   right: 0px;
+  cursor: pointer;
 }
 
 .direct {
@@ -64,38 +67,42 @@ body {
 }
 
 #home {
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  opacity: 0.8;
 }
 
 #sched {
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
-	z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  opacity: 0.8;
 }
 
 #vod {
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
-	z-index: -2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  opacity: 0.8;
 }
 
 .backgroundhead {
-	background-image: url(/assets/banner2.png);
-	background-repeat: no-repeat;
-	height:455px;
-	padding-bottom: 5px;
-	text-align: center;
+  background-image: url(/assets/banner2.png);
+  background-repeat: no-repeat;
+  height:455px;
+  padding-bottom: 5px;
+  text-align: center;
   position: absolute;
   top: 10px;
   left: 10px;
   right: 10px;
-	z-index: -3;
+  z-index: -3;
 }
 
