--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ body {
 }
 
 .socialcontainer {
-  background-color:black;
+  background-color: #7dced5;
   height:80px;
-  border: solid white;
+  border: solid black;
   text-align: center;
 }
 
@@ -59,7 +59,7 @@ body {
   cursor: pointer;
 }
 
-.direct {
+#direct {
   position: absolute;
   left: 787px;
   top: 230px;
@@ -94,7 +94,7 @@ body {
 }
 
 .backgroundhead {
-  background-image: url(/assets/banner2.png);
+  background-image: url(/assets/banner.png);
   background-repeat: no-repeat;
   height:455px;
   padding-bottom: 5px;
@@ -106,3 +106,6 @@ body {
   z-index: -3;
 }
 
+.calendar {
+  text-align: center;
+}
