--- a/faq/style.css
+++ b/faq/style.css
@@ -58,23 +58,17 @@ body {
   position: absolute;
   width: 38px;
   height: 47px;
-  margin: 0 auto;
+  margin top: 10px;
   left: 0;
   right: 0;
-  top: 230px;
-  padding-left: 430px;
   cursor: pointer;
+  z-index: 10;
 }
 
-.direct {
-  position: absolute;
+#direct {
+  position: relative;
   width: 360px;
   height: 47px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  top: 230px;
-  padding-left: 856px;
 }
 
 #home {
