--- a/style.css
+++ b/style.css
@@ -1,125 +1,152 @@
 .logo {
   position: absolute;
-  left: 740px;
-  top: 5px;
-  z-index: 4;
+  width: 412px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
 }
 
-.button {
-  padding-right: 15px;
-  padding-left: 15px;
-  float: center;
-  display: inline;
+.home {
+  position: absolute;
+  margin: 0 auto;
+  right: 1520px;
+  left: 20px;
+  top: 20px;
+  float: left;
   width: 250px;
   height: 50px;
 }
 
-a {
-  text-decoration: none
+#home2{
+  opacity: 0;
 }
 
-body {
-  background-color: white;
-}
-
-.twitchlogin {
-  margin-right: 25px;
-  margin-top: 10px;
-  float: right;
-}
-
-.logohead {
-  height:455px;
-  padding-bottom: 7px;
-  text-align: center;
-}
-
-.socialcontainer {
-  background-color: #7dced5;
+.vod {
   position: absolute;
-  height:80px;
-  width: 1870px;
-  border: solid black;
-  text-align: center;
-  left: 14px;
+  margin: 0 auto;
+  right: 1270px;
+  left: 270px;
+  top: 20px;
+  float: left;
+  width: 250px;
+  height: 50px;
 }
 
-.twitch-connect {
-  display: none;
-  cursor: pointer;
+#vod2{
+  opacity: 0;
 }
 
-.twitch-logout {
-  display: none;
-  cursor: pointer;
-}
-
-#tab {
+.sched {
   position: absolute;
-  left: 1145px;
-  top: 230px;
-  right: 0px;
-  cursor: pointer;
+  margin: 0 auto;
+  right: 1020px;
+  left: 520px;
+  top: 20px;
+  float: left;
+  width: 250px;
+  height: 50px;
 }
 
-#direct {
-  position: absolute;
-  left: 787px;
-  top: 230px;
-  right: 0px;
+#sched2{
+  opacity: 0;
 }
 
-#home {
+.faq {
   position: absolute;
-  left: 0;
-  top: 0;
+  margin: 0 auto;
+  right: 770px;
+  left: 770px;
+  top: 20px;
+  float: left;
+  width: 250px;
+  height: 50px;
+}
+
+#faq2{
+  opacity: 0;
+}
+
+.comp {
+  position: absolute;
+  margin: 0 auto;
+  right: 520px;
+  left: 1020px;
+  top: 20px;
+  float: left;
+  width: 250px;
+  height: 50px;
+}
+
+#comp2{
+  opacity: 0;
+}
+
+.discord {
+  position: absolute;
+  margin: 0 auto;
+  right: 270px;
+  left: 1270px;
+  top: 20px;
+  float: left;
+  width: 250px;
+  height: 50px;
+}
+
+#discord2{
+  opacity: 0;
+}
+
+.social {
+  position: absolute;
+  margin: 0 auto;
   right: 0;
-  z-index: 3;
-  opacity: 0.8;
+  left: 1520px;
+  top: 20px;
+  float: left;
+  width: 250px;
+  height: 50px;
 }
 
-#sched {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  opacity: 0.8;
+#social2{
+  opacity: 0;
 }
 
-#vod {
+.pull {
   position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  opacity: 0.8;
+  width: 55px;
+  height: 40px;
+  margin: 0 auto;
+  left: 30px;
+  top: 20px;
+  cursor: pointer;
+  visibility: hidden;
 }
 
 .backgroundhead {
-  background-image: url(/assets/banner.png);
   background-repeat: no-repeat;
+  background-position: center;
+  background-color: white;
   height: 455px;
-  width: 1870px;
-  border: solid black;
-  padding-bottom: 5px;
-  text-align: center;
-  position: absolute;
-  top: 6px;
-  left: 14px;
-  right: 10px;
-  z-index: -3;
+  position: relative;
+  margin: auto;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: -2;
 }
 
 .content {
-  position: absolute;
-  left: 320px;
-  top: 570px;
-  width: 1350px;
-  background-color: #7dced5;
-  border: solid black;
-  margin-bottom: 7px;
-  z-index: -1
+  position: relative;
+  margin-left: 270px;
+  margin-right: 270px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  z-index: -1;
+  font-family: Helvetica;
+  font-size: 15px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
 }
 
 .calendar {
@@ -128,6 +155,33 @@ body {
   margin-bottom: 15px;
 }
 
+.playlist {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 42px;
+  margin-right: 42px;
+}
+
 .form {
   padding-left: 547px;
+}
+
+a {
+  text-decoration: none
+}
+
+header {
+  font-family: Helvetica;
+  font-size: 20px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  word-spacing: 30px;
+}
+
+body {
+  background-color: white;
+  margin: auto;
+  padding: 0;
 }
