--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@
   height: 50px;
   border-bottom: 3px solid #dedede;
   border-left: 3px solid #dedede;
-  z-index: 1;
+  z-index: 2;
 }
 
-#home2{
+#home2 {
   opacity: 0;
 }
 
@@ -36,10 +36,10 @@
   width: 250px;
   height: 50px;
   border-bottom: 3px solid #d3d3d3;
-  z-index: 1;
+  z-index: 2;
 }
 
-#vod2{
+#vod2 {
   opacity: 0;
 }
 
@@ -53,10 +53,10 @@
   width: 250px;
   height: 50px;
   border-bottom: 3px solid #d3d3d3;
-  z-index: 1;
+  z-index: 2;
 }
 
-#sched2{
+#sched2 {
   opacity: 0;
 }
 
@@ -70,10 +70,10 @@
   width: 250px;
   height: 50px;
   border-bottom: 3px solid #d3d3d3;
-  z-index: 1;
+  z-index: 2;
 }
 
-#faq2{
+#faq2 {
   opacity: 0;
 }
 
@@ -87,10 +87,10 @@
   width: 250px;
   height: 50px;
   border-bottom: 3px solid #d3d3d3;
-  z-index: 1;
+  z-index: 2;
 }
 
-#comp2{
+#comp2 {
   opacity: 0;
 }
 
@@ -104,10 +104,10 @@
   width: 250px;
   height: 50px;
   border-bottom: 3px solid #d3d3d3;
-  z-index: 1;
+  z-index: 2;
 }
 
-#discord2{
+#discord2 {
   opacity: 0;
 }
 
@@ -123,10 +123,105 @@
   cursor: pointer;
   border-bottom: 3px solid #d3d3d3;
   border-right: 3px solid #d3d3d3;
+  z-index: 2;
+}
+
+#social2 {
+  opacity: 0;
+}
+
+.twitch {
+  position: fixed;
+  margin: 0 auto;
+  right: 0;
+  left: 1500px;
+  top: -55px;
+  float: left;
+  width: 250px;
+  height: 50px;
+  cursor: pointer;
+  border-bottom: 3px solid #d3d3d3;
+  border-right: 3px solid #d3d3d3;
   z-index: 1;
 }
 
-#social2{
+#twitch2 {
+  opacity: 0;
+}
+
+.twitter {
+  position: fixed;
+  margin: 0 auto;
+  right: 0;
+  left: 1500px;
+  top: -55px;
+  float: left;
+  width: 250px;
+  height: 50px;
+  cursor: pointer;
+  border-bottom: 3px solid #d3d3d3;
+  border-right: 3px solid #d3d3d3;
+  z-index: 1;
+}
+
+#twitter2 {
+  opacity: 0;
+}
+
+.instagram {
+  position: fixed;
+  margin: 0 auto;
+  right: 0;
+  left: 1500px;
+  top: -55px;
+  float: left;
+  width: 250px;
+  height: 50px;
+  cursor: pointer;
+  border-bottom: 3px solid #d3d3d3;
+  border-right: 3px solid #d3d3d3;
+  z-index: 1;
+}
+
+#instagram2 {
+  opacity: 0;
+}
+
+.facebook {
+  position: fixed;
+  margin: 0 auto;
+  right: 0;
+  left: 1500px;
+  top: -55px;
+  float: left;
+  width: 250px;
+  height: 50px;
+  cursor: pointer;
+  border-bottom: 3px solid #d3d3d3;
+  border-right: 3px solid #d3d3d3;
+  z-index: 1;
+}
+
+#facebook2 {
+  opacity: 0;
+}
+
+.youtube {
+  position: fixed;
+  margin: 0 auto;
+  right: 0;
+  left: 1500px;
+  top: -55px;
+  float: left;
+  width: 250px;
+  height: 50px;
+  cursor: pointer;
+  border-bottom: 3px solid #d3d3d3;
+  border-right: 3px solid #d3d3d3;
+  z-index: 3;
+}
+
+#youtube2{
   opacity: 0;
 }
 
